# CibersecurityStuff

./: palabras.txt
Programs/KeyLogger/: keylogger1.py
Programs/KeyLogger/Example_1/: keylogger1.py  keylogger1.spec  pyproject.toml
