[project]
name = "keylogger"
version = "0.1.0"
description = "Tests and examples of KeyLogger programs"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard (>=0.13.5,<0.14.0)"
]

[tool.poetry]
name = "keylogger"
version = "0.1.0"
package-mode = false



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
